--- a/templates/viewData.html
+++ b/templates/viewData.html
@@ -5,6 +5,9 @@
     <title>Data view</title>
 </head>
 <body>
+    <table>
 
+    </table>
 </body>
+<script src="/static/build_table.js"></script>
 </html>
