--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <!--suppress ALL -->
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/IndexStyle.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Josefin+Sans" />
     <link rel="icon" href="https://jennipher.tech/assets/j.png" type="image/png">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
