Doesn't auto redirect on "go back" Consistent footer formatting Changed TODO

--- a/templates/quick_access.html
+++ b/templates/quick_access.html
@@ -33,6 +33,9 @@
             Http.open("GET", url, true);
             Http.send();
         </script>
+        <footer>
+            <a href="/">Go back</a>
+        </footer>
     </div>
 </body>
 </html>
