--- a/static/IndexStyle.css
+++ b/static/IndexStyle.css
@@ -10,6 +10,7 @@ body {
   flex-direction: column;
   width: 100%;
   font-family: 'Josefin Sans', sans-serif;
+  padding-bottom: 2.5rem;
 }
 
 .header {
@@ -22,4 +23,18 @@ body {
 
 .g-signin2 {
   margin: 1em;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.explaination {
+  vertical-align: middle;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    text-align: center;
 }
