--- a/static/QAStyle.css
+++ b/static/QAStyle.css
@@ -10,6 +10,7 @@ body {
   flex-direction: column;
   width: 100%;
   font-family: 'Josefin Sans', sans-serif;
+  padding-bottom: 2.5rem;
 }
 
 .subtitle {
@@ -20,7 +21,9 @@ div.item {
     vertical-align: top;
     display: inline-block;
     text-align: center;
-    width: 120px;
+    right: 10%;
+    z-index: 905;
+    top: 10%;
 }
 
 #userimage {
@@ -35,3 +38,10 @@ div.item {
     display: block;
 }
 
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    text-align: center;
+}
