--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,13 @@
     <meta charset="UTF-8">
     <title>CSV Data tool</title>
   </head>
-  <body>
+  <body onload="signOut();">
     <div class="container">
       <h1 class="header" id="cool">CSV Data Tool</h1>
       <p class="subtitle">A Jennipher Project</p>
       <p class="subtitle">"By" Devin Kennedy</p>
-      <div class="g-signin2" data-onsuccess="onSuccess"></div>
+      <div class="g-signin2" data-onsuccess="onSuccess"></div><span class="explaination"><i>For quick access to files</i></span>
+      <br>
       <script>
         var url = "/verify";
         function onSuccess(googleUser) {
@@ -28,6 +29,7 @@
           Http.send('idtoken=' + id_token);
           Http.onload = function() {
             window.location.href = "/quick_access/" + Http.responseText;
+            signOut();
           };
           Http.onerror = function() {
             console.log("error");
