Small index.html formatting fully implemented error screens

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
   <body onload="signOut();">
     <div class="container">
       <h1 class="header" id="cool">CSV Data Tool</h1>
-      <p class="subtitle">A Jennipher Project</p>
-      <p class="subtitle">"By" Devin Kennedy</p>
+      <p class="subtitle"><i>A Jennipher Project</i></p>
+      <p class="subtitle">By Devin Kennedy</p>
       <div class="g-signin2" data-onsuccess="onSuccess"></div><span class="explaination"><i>For quick access to files</i></span>
       <br>
       <script>
