Commented through main.py Updated TODO/readme.md

--- a/templates/general_error.html
+++ b/templates/general_error.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/static/IndexStyle.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Josefin+Sans" />
+    <link rel="icon" href="https://jennipher.tech/assets/j.png" type="image/png">
     <title>Error</title>
 </head>
 <body>
